--- a/src/templates/partials/events.hbs
+++ b/src/templates/partials/events.hbs
@@ -2,7 +2,7 @@
 
     <div class="event-feed-2450">
 
-        <h2 class="uppercase-underlined">Events</h2>
+        <h2>Events</h2>
 
         <div class="events__item" itemscope="itemscope" itemtype="https://schema.org/Event">
             <p class="events__date-tile">
