--- a/src/templates/partials/news.hbs
+++ b/src/templates/partials/news.hbs
@@ -1,6 +1,6 @@
 <div class="news">
 	<div class="news-feed-8585">
-		<h2 class="uppercase-underlined">News</h2>
+		<h2>News</h2>
 
 	    <div class="news__item" itemscope="itemscope" itemtype="http://schema.org/NewsArticle">
 	    	<div class="news__image">
