--- a/src/templates/partials/section--apply.hbs
+++ b/src/templates/partials/section--apply.hbs
@@ -15,8 +15,8 @@
 							</div>
 							<div class="grid-cell u-medium-2-5">
 								<div class="small-grid-pad-2x  medium-grid-pad-2x">
-									<h2 class="beta  fw500">Apply Now</h2>
-									<p class="h3  mb2  fw300">We try to make the application process as easy as possible. The whole process can take you less than 30 minutes!</p>
+									<h2 class="beta  fw300">Apply Now</h2>
+									<p>We try to make the application process as easy as possible. The whole process can take you less than 30 minutes!</p>
 									<p><a class="btn">Start your application</a></p>
 								</div>
 							</div>
