--- a/src/templates/partials/section--find-program.hbs
+++ b/src/templates/partials/section--find-program.hbs
@@ -1,7 +1,7 @@
 <section class="grid-section  section--find-program  mt0  pv6--medium">
 	<div class="inner">
 		<div class="grid  grid--center  mt3  mb6--medium  pb3 pb6--medium">
-			<div class="grid-cell">
+			<div class="grid-cell  u-medium-4-5">
 				<div class="medium-grid-pad-1x">
 
 					<div class="grid  grid--center">
