--- a/src/templates/partials/section--request-info.hbs
+++ b/src/templates/partials/section--request-info.hbs
@@ -12,7 +12,7 @@
 						</fieldset>
 						<fieldset>
 							I'd like to learn more about Bethel's
-							<select>
+							<select class="form--request-info__select">
 								<option id="bachelors" value="Bachelors">bachelors degrees</option>
 								<option value="Bachelors">masters degrees</option>
 								<option value="Bachelors">doctorate programs</option>
