--- a/src/css/forms/form--request-info.css
+++ b/src/css/forms/form--request-info.css
@@ -38,14 +38,24 @@
 }
 
 .form--request-info select {
+  border-left: 0;
+  border-right: 0;
+  border-top: 0;
   border-bottom: 0;
+  background: transparent;
+  color: $bethel--yellow;
+  font-size: 1.4rem;
   height: 2.5em;
 }
 
 .form--request-info #user_name {
-  width: 5em;
+  width: 6em;
 }
 
 .form--request-info #user_email {
+  width: 12em;
+}
+
+.form--request-info__select {
   width: 12em;
 }
