--- a/src/templates/partials/section--find-program.hbs
+++ b/src/templates/partials/section--find-program.hbs
@@ -23,17 +23,55 @@
 								<div class="grid-pad-2x">
 									<h4>Degree Type</h4>
 									<label><input type="radio" value="" checked="true"> All</label>
-									<label><input type="radio" value=""> Bachelors</label>
-									<label><input type="radio" value=""> Masters</label>
+									<label><input type="radio" value=""> Associate's</label>
+									<label><input type="radio" value=""> Bachelor's</label>
+									<label><input type="radio" value=""> Master's</label>
 									<label><input type="radio" value=""> Doctorate</label>
+									<hr>
+									<label><input type="radio" value=""> Certificate</label>
+									<label><input type="radio" value=""> License</label>
 								</div>
 							</div>
 							<div class="grid-cell">
 								<div class="grid-pad-2x">
-									<h4>Delivery type</h4>
-									<label><input type="checkbox" checked="true"> Campus</label>
-									{{!-- <label><input type="checkbox" checked="true"> Evening</label> --}}
-									<label><input type="checkbox" checked="true"> Online</label>
+									<h4>Delivery Type</h4>
+									<div class="form--filter-option">
+										<input class="mr1" type="checkbox" checked="true" id="facetoface">
+										<label for="facetoface">Face to Face</label>
+									</div>
+									<div class="form--filter-option">
+										<input class="mr1" type="checkbox" checked="true" id="blended">
+										<label for="blended">Blended</label>
+									</div>
+									<div class="form--filter-option">
+										<input class="mr1" type="checkbox" checked="true" id="online">
+										<label for="online">Online</label>
+									</div>
+								</div>
+							</div>
+							<div class="grid-cell">
+								<div class="grid-pad-2x">
+									<h4>School</h4>
+									<div class="form--filter-option">
+										<input class="mr1" type="checkbox" checked="true" id="facetoface">
+										<label for="facetoface">All</label>
+									</div>
+									<div class="form--filter-option">
+										<input class="mr1" type="checkbox" checked="true" id="blended">
+										<label for="blended">College of Arts &amp; Sciences</label>
+									</div>
+									<div class="form--filter-option">
+										<input class="mr1" type="checkbox" checked="true" id="online">
+										<label for="online">College of Adult &amp; Sciences</label>
+									</div>
+									<div class="form--filter-option">
+										<input class="mr1" type="checkbox" checked="true" id="facetoface">
+										<label for="facetoface">Graduate School</label>
+									</div>
+									<div class="form--filter-option">
+										<input class="mr1" type="checkbox" checked="true" id="blended">
+										<label for="blended">Bethel Seminary</label>
+									</div>
 								</div>
 							</div>
 						</div>
