--- a/src/css/forms/form--find-program.css
+++ b/src/css/forms/form--find-program.css
@@ -29,8 +29,8 @@
 }
 
 .form--filter-option input[type=checkbox]{
-    width: 2em;
-    height: 2em;
+/*     width: 2em;
+    height: 2em; */
 }
 
 .form--find-program .search--program {
