--- a/src/templates/partials/section--find-program.hbs
+++ b/src/templates/partials/section--find-program.hbs
@@ -19,22 +19,21 @@
 							<button class="btn">Find programs</button>
 						</div>
 						<div class="grid">
-							<div class="grid-cell">
-								<div class="grid-pad-2x">
-									<h4>Degree Type</h4>
+							<div class="grid-cell  bkg--white  ma1">
+								<div class="grid-pad-1x">
+									<h4 class="mb1">Degree Type</h4>
 									<label><input type="radio" value="" checked="true"> All</label>
 									<label><input type="radio" value=""> Associate's</label>
 									<label><input type="radio" value=""> Bachelor's</label>
 									<label><input type="radio" value=""> Master's</label>
 									<label><input type="radio" value=""> Doctorate</label>
-									<hr>
 									<label><input type="radio" value=""> Certificate</label>
 									<label><input type="radio" value=""> License</label>
 								</div>
 							</div>
-							<div class="grid-cell">
-								<div class="grid-pad-2x">
-									<h4>Delivery Type</h4>
+							<div class="grid-cell bkg--white  ma1">
+								<div class="grid-pad-1x">
+									<h4 class="mb1">Delivery Type</h4>
 									<div class="form--filter-option">
 										<input class="mr1" type="checkbox" checked="true" id="facetoface">
 										<label for="facetoface">Face to Face</label>
@@ -49,9 +48,9 @@
 									</div>
 								</div>
 							</div>
-							<div class="grid-cell">
-								<div class="grid-pad-2x">
-									<h4>School</h4>
+							<div class="grid-cell  bkg--white  ma1">
+								<div class="grid-pad-1x">
+									<h4 class="mb1">School</h4>
 									<div class="form--filter-option">
 										<input class="mr1" type="checkbox" checked="true" id="facetoface">
 										<label for="facetoface">All</label>
