tweaking program search results

--- a/src/css/post.css
+++ b/src/css/post.css
@@ -37,6 +37,7 @@
 @import "modules/calendar.css";
 @import "modules/news.css";
 @import "modules/events.css";
+@import "modules/program-search.css";
 @import "modules/social-media.css";
 @import "modules/moving-picture.css";
 @import "modules/section--home.css";
