--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -15,34 +15,32 @@
 		{{!-- {{> school__navigation }} --}}
 
 
-		<div class="grid-section mt0" >
+{{!-- 		<div class="grid-section mt0" >
 			{{> moving-picture }}
-		</div>
+		</div> --}}
 
 		{{!-- {{> section--apply }} --}}
 
 
-{{!-- 		<p class="site__title__button" id="js-site__title__button"><a href="#siteNav">☰ In This Section</a></p>
+		<p class="site__title__button" id="js-site__title__button"><a href="#siteNav">☰ In This Section</a></p>
 
 		<div class="inner--content">
 		    <div class="inner-wrap--site__navigation" id="js-inner-wrap--site__navigation">
 
-		    	{{> site__navigation }}
+		    	{{!-- {{> site__navigation }} --}}
 
-		        {{> page__title }} --}}
+		        {{> page__title }}
 
 				{% body %}
 
-{{!-- 		    </div>
-		</div> --}}
+		    </div>
+		</div>
 
 				{{!-- {{> section--home__academics }} --}}
 
 		{{> global__footer }}
 
 	</div>
-
-	{{!-- // <script src="https://cdnjs.cloudflare.com/ajax/libs/flickity/1.1.0/flickity.pkgd.min.js"></script>	 --}}
 
 <script>
     function loadJS(u) {var r = document.getElementsByTagName("script")[0], s = document.createElement("script"); s.src = u; r.parentNode.insertBefore(s, r); }
