--- a/src/templates/pages/random.hbs
+++ b/src/templates/pages/random.hbs
@@ -4,74 +4,83 @@ layout: default
 pageTitle: Program Search
 ---
 
+<p class="site__title__button" id="js-site__title__button"><a href="#siteNav">☰ In This Section</a></p>
+
+
+<div class="inner--content">
+    <div class="inner-wrap--site__navigation" id="js-inner-wrap--site__navigation">
+
 <div class="main">
     <div class="program-search">
         <div class="mb4">
         <h2>Associate's Degrees</h2>
         <div class="grid  program-search__table-head">
-            <div class="grid-cell  ph1--medium">Name</div>
-            <div class="grid-cell  ph1--medium">Degree Level</div>
-            <div class="grid-cell  ph1--medium">Delivery</div>
-            <div class="grid-cell  ph1--medium">Compare</div>
+            <div class="grid-cell">Name</div>
+            <div class="grid-cell">Degree Level</div>
+            <div class="grid-cell">Delivery</div>
+            <div class="grid-cell">Compare</div>
         </div>
         <div class="grid">
-            <div class="grid-cell  ph1--medium"><a class="" href="#">Associate of Arts</a></div>
-            <div class="grid-cell  ph1--medium"><span class="icon  icon--adult"></span>Adult Degree Completion</div>
-            <div class="grid-cell  ph1--medium">Face to Face, Online</div>
-            <div class="grid-cell  ph1--medium"><input type="checkbox"></div>
+            <div class="grid-cell"><a class="" href="#">Associate of Arts</a></div>
+            <div class="grid-cell"><span class="icon  icon--adult"></span><span class="degree-level">Adult Degree Completion</span></div>
+            <div class="grid-cell">Face to Face, Online</div>
+            <div class="grid-cell"><input type="checkbox"></div>
         </div>
         <div class="grid">
-            <div class="grid-cell  ph1--medium"><a class="" href="#">Accounting</a></div>
-            <div class="grid-cell  ph1--medium"><span class="icon  icon--major"></span>Major</div>
-            <div class="grid-cell  ph1--medium">Face to Face</div>
-            <div class="grid-cell  ph1--medium"><input type="checkbox"></div>
+            <div class="grid-cell"><a class="" href="#">Accounting</a></div>
+            <div class="grid-cell"><span class="icon  icon--major"></span><span class="degree-level">Major</span></div>
+            <div class="grid-cell">Face to Face</div>
+            <div class="grid-cell"><input type="checkbox"></div>
         </div>
         <div class="grid">
-            <div class="grid-cell  ph1--medium"><a class="" href="#">Biblical and Theological Studies</a></div>
-            <div class="grid-cell  ph1--medium"><span class="icon  icon--minor"></span>Minor</div>
-            <div class="grid-cell  ph1--medium">Face to Face</div>
-            <div class="grid-cell  ph1--medium"><input type="checkbox"></div>
+            <div class="grid-cell"><a class="" href="#">Biblical and Theological Studies</a></div>
+            <div class="grid-cell"><span class="icon  icon--minor"></span><span class="degree-level">Minor</span></div>
+            <div class="grid-cell">Face to Face</div>
+            <div class="grid-cell"><input type="checkbox"></div>
         </div>
         <div class="grid">
-            <div class="grid-cell  ph1--medium"><a class="" href="#">Name of the program</a></div>
-            <div class="grid-cell  ph1--medium"><span class="icon  icon--major"></span>Major</div>
-            <div class="grid-cell  ph1--medium">Online</div>
-            <div class="grid-cell  ph1--medium"><input type="checkbox"></div>
+            <div class="grid-cell"><a class="" href="#">Name of the program</a></div>
+            <div class="grid-cell"><span class="icon  icon--major"></span><span class="degree-level">Major</span></div>
+            <div class="grid-cell">Online</div>
+            <div class="grid-cell"><input type="checkbox"></div>
         </div>
         </div>
 
         <div class="mb4">
         <h2>Bachelor's Degrees</h2>
         <div class="grid  program-search__table-head">
-            <div class="grid-cell  ph1--medium">Name</div>
-            <div class="grid-cell  ph1--medium">Degree Level</div>
-            <div class="grid-cell  ph1--medium">Delivery</div>
-            <div class="grid-cell  ph1--medium">Compare</div>
+            <div class="grid-cell">Name</div>
+            <div class="grid-cell">Degree Level</div>
+            <div class="grid-cell">Delivery</div>
+            <div class="grid-cell">Compare</div>
         </div>
         <div class="grid">
-            <div class="grid-cell  ph1--medium"><a href="#">Associate of Arts</a></div>
-            <div class="grid-cell  ph1--medium">Adult Degree Completion</div>
-            <div class="grid-cell  ph1--medium">Face to Face, Online</div>
-            <div class="grid-cell  ph1--medium"><input type="checkbox"></div>
+            <div class="grid-cell"><a href="#">Associate of Arts</a></div>
+            <div class="grid-cell">Adult Degree Completion</div>
+            <div class="grid-cell">Face to Face, Online</div>
+            <div class="grid-cell"><input type="checkbox"></div>
         </div>
         <div class="grid">
-            <div class="grid-cell  ph1--medium"><a href="#">Accounting</a></div>
-            <div class="grid-cell  ph1--medium">Major</div>
-            <div class="grid-cell  ph1--medium">Face to Face</div>
-            <div class="grid-cell  ph1--medium"><input type="checkbox"></div>
+            <div class="grid-cell"><a href="#">Accounting</a></div>
+            <div class="grid-cell">Major</div>
+            <div class="grid-cell">Face to Face</div>
+            <div class="grid-cell"><input type="checkbox"></div>
         </div>
         <div class="grid">
-            <div class="grid-cell  ph1--medium"><a href="#">Biblical and Theological Studies</a></div>
-            <div class="grid-cell  ph1--medium">Minor</div>
-            <div class="grid-cell  ph1--medium">Face to Face</div>
-            <div class="grid-cell  ph1--medium"><input type="checkbox"></div>
+            <div class="grid-cell"><a href="#">Biblical and Theological Studies</a></div>
+            <div class="grid-cell">Minor</div>
+            <div class="grid-cell">Face to Face</div>
+            <div class="grid-cell"><input type="checkbox"></div>
         </div>
         <div class="grid">
-            <div class="grid-cell  ph1--medium"><a href="#">Name of the program</a></div>
-            <div class="grid-cell  ph1--medium">Major</div>
-            <div class="grid-cell  ph1--medium">Online</div>
-            <div class="grid-cell  ph1--medium"><input type="checkbox"></div>
+            <div class="grid-cell"><a href="#">Name of the program</a></div>
+            <div class="grid-cell">Major</div>
+            <div class="grid-cell">Online</div>
+            <div class="grid-cell"><input type="checkbox"></div>
         </div>
         </div>
+    </div>
+</div>
+
     </div>
 </div>
