--- a/src/templates/partials/section--find-program.hbs
+++ b/src/templates/partials/section--find-program.hbs
@@ -19,7 +19,7 @@
 							<button class="btn">Find programs</button>
 						</div>
 						<div class="grid">
-							<div class="grid-cell  bkg--white  ma1">
+{{!-- 							<div class="grid-cell  bkg--white  ma1">
 								<div class="grid-pad-1x">
 									<h4 class="mb1">Degree Type</h4>
 									<label><input type="radio" value="" checked="true"> All</label>
@@ -30,8 +30,8 @@
 									<label><input type="radio" value=""> Certificate</label>
 									<label><input type="radio" value=""> License</label>
 								</div>
-							</div>
-							<div class="grid-cell bkg--white  ma1">
+							</div> --}}
+{{!-- 							<div class="grid-cell bkg--white  ma1">
 								<div class="grid-pad-1x">
 									<h4 class="mb1">Delivery Type</h4>
 									<div class="form--filter-option">
@@ -47,8 +47,8 @@
 										<label for="online">Online</label>
 									</div>
 								</div>
-							</div>
-							<div class="grid-cell  bkg--white  ma1">
+							</div> --}}
+{{!-- 							<div class="grid-cell  bkg--white  ma1">
 								<div class="grid-pad-1x">
 									<h4 class="mb1">School</h4>
 									<div class="form--filter-option">
@@ -72,7 +72,7 @@
 										<label for="blended">Bethel Seminary</label>
 									</div>
 								</div>
-							</div>
+							</div> --}}
 						</div>
 						
 					</form>
