--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -50,6 +50,40 @@ pageTitle: Test title
                 </div>
             </div>
 
+            <div class="grid">
+                <div class="grid-cell  mb4  js-animateSlideRight">
+                    <div class="medium-grid-pad-1x">
+
+                            <div class="quote">
+                                <div class="quote__avatar">
+                                    <img  class="lazyload" data-src="https://cdn2.bethel.edu/resize/unsafe/200x0/smart/https://www.bethel.edu//_shared-content/quotes/images/cas__business_lin-chin-chin.jpg" style="opacity: 1;" title="">
+                                </div>
+
+                                <div class="quote__text">
+                                    <p>While interviewing with a Bethel alum for a position at UnitedHealth Group, the interviewer asked me to consider joining the International Audit department instead of the position for which I had applied.</p>
+                                    <cite class="quote__source">–Chin-Chin Lin</cite>
+                                </div>
+                            </div>
+
+                    </div>
+                </div>
+                <div class="grid-cell  js-animateSlideLeft">
+                    <div class="medium-grid-pad-1x">
+
+                        <div class="quote">
+                            <div class="quote__avatar">
+                                <img  class="lazyload" data-src="https://cdn1.bethel.edu/resize/unsafe/200x0/smart/https://www.bethel.edu//_shared-content/quotes/images/cas__business_nettleton-nicole.jpg" style="opacity: 1;">
+                            </div>
+                            <div class="quote__text">
+                                <p>Bethel really prepared me...having a liberal arts education was beneficial because it made me well rounded.[Businesses] look for people with all sorts of different backgrounds and leadership experience. Bethel encourages people to get involved.</p>
+                                <cite class="quote__source">–Nicole (Nettleton) Willenbring</cite>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
         </div>
     </section>
     
