--- a/src/templates/partials/moving-picture.hbs
+++ b/src/templates/partials/moving-picture.hbs
@@ -21,10 +21,10 @@
             </picture>
         </div>
 
-        <div class="moving-picture__overlay">
-            <h2 class="moving-picture__overlay__headline">{{  this.headline }}</h2>
-            <p class="moving-picture__overlay__teaser">{{  this.teaser }}</p> 
-            <p><a class="moving-picture__overlay__button" href="admissions/index.php">{{ this.button }}</a></p>
+        <div class="moving-picture__overlay  js-animateSequence">
+            <h2 class="moving-picture__overlay__headline seq">{{  this.headline }}</h2>
+            <p class="moving-picture__overlay__teaser seq">{{  this.teaser }}</p> 
+            <p class="seq"><a class="moving-picture__overlay__button " href="admissions/index.php">{{ this.button }}</a></p>
         </div>
     </div>
 
