--- a/src/templates/partials/section--request-info.hbs
+++ b/src/templates/partials/section--request-info.hbs
@@ -7,15 +7,15 @@
 					<form class="form--request-info">
 					<blockquote class="center">
 						<fieldset>
-							My <label class="form--request-info__label" for="user_name">name</label> is <input required="" name="user[name]" id="user_name" value="" type="text">
+							Hello, my <label class="form--request-info__label" for="user_name">name</label> is <input required="" name="user[name]" id="user_name" value="" type="text">
 							and my <label class="form--request-info__label" for="user_email">email</label> is <input required="" name="user[email]" id="user_email" value="" type="email">.
 						</fieldset>
 						<fieldset>
 							I'd like to learn more about Bethel's
 							<select class="form--request-info__select">
-								<option id="bachelors" value="Bachelors">bachelors degrees</option>
-								<option value="Bachelors">masters degrees</option>
-								<option value="Bachelors">doctorate programs</option>
+								<option id="bachelors" value="Bachelors">bachelor's degrees</option>
+								<option value="Bachelors">master's degrees</option>
+								<option value="Bachelors">doctoral programs</option>
 							</select> .
 						</fieldset>
 					</blockquote>
