--- a/src/templates/partials/section--contact-visit.hbs
+++ b/src/templates/partials/section--contact-visit.hbs
@@ -6,13 +6,13 @@
 				<div class="grid-cell u-medium-2-3">
 					<div class="small-grid-pad-2x  medium-grid-pad-2x">
 						<h2 class="beta  mb1  center  fw300">See yourself here.</h2>
-						<p class="h3  mb2  mb4--medium  fw400">With 9,783 majors, 2,000 programs, 3,000 student-led clubs, extracirricular activities and intramural sports, there is something at Bethel for you. Our community is our best feature, and we hope you think so too.</p>
+						<p class="h3  mb2  mb4--medium  fw400">With over 100 majors and programs of study, dozens of student-led clubs, extracirricular activities and intramural sports, there is something at Bethel for you. Our community is informed by our academics and our faith and we think its our best feature. We hope you think so too.</p>
 					</div>
 				</div>
 			</div>
 
 			<div class="grid  grid--wrap">
-				<div class="grid-cell u-medium-1-2  pv2  ph2  ph5@medium">
+				<div class="grid-cell u-medium-1-2  pa2  ph5@medium  js-animateSlideRight">
 					<svg xmlns="http://www.w3.org/2000/svg" height="33" version="1.1" viewBox="0 0 32 33" width="32">
 						<g data-iconmelon="Simple Line Icons:fb184cb4fb59727d7839f79c7a826661" id="bubble-speach">
 							<g>
@@ -48,12 +48,12 @@
 						</g>
 					</svg>
 					<h3 class="h2">Contact Us</h3>
-					<p>Finding the right university can be a challenge, and we want you to know that we are here to help with any questions or concerns you may have. No question is too big or too small.</p> 
+					<p>Finding the right university is a challenge. We want you to know that we are here to help with any questions or concerns you may have. No question is too big or too small.</p> 
 					<p class="h4"><a href="tel:6516388500">651.638.8500</a></p>
 					<p class="h4"><a href="mailto:contact@bethel.edu">contact@bethel.edu</a></p>
 				</div>
 
-				<div class="grid-cell u-medium-1-2  pv2  ph2  ph5@medium">
+				<div class="grid-cell u-medium-1-2  pa2  ph5@medium  js-animateSlideLeft">
 					<svg xmlns="http://www.w3.org/2000/svg" height="33" version="1.1" viewBox="0 0 32 33" width="32">
 						<g data-iconmelon="Streamline Icon Set:f2ad77ff5aac84e660d36d2b8a91449e" id="map-pin">
 							<g id="Expanded">
@@ -69,7 +69,7 @@
 						</g>
 					</svg>
 					<h3 class="h2">Visit</h3>
-					<p>We think our campus is one of our best features and we'd love to show it to you. Come during one of our campus visit events or schedule your own tour.
+					<p>We think our campus is an amazing place and we'd love to show it to you. Schedule your own visit our come during one of our campus visit events. 
 					<p><button class="btn mt2  mr1" jtype="submit">See events</button><button class="btn  mt2" jtype="submit">Schedule a visit</button></p>
 
 				</div>
