--- a/src/css/global/off-canvas--global.css
+++ b/src/css/global/off-canvas--global.css
@@ -87,7 +87,7 @@
     }
 }
 
-@media screen (max-width: 51.99em){
+@media screen and (max-width: 51.99em){
     .no-js .close-btn {
         display: block;
     }
