--- a/src/templates/pages/layout.hbs
+++ b/src/templates/pages/layout.hbs
@@ -3,6 +3,26 @@ title: LAYOUT
 layout: default
 ---
 
+<dl class="dl--generic">
+	<dt>Total Credits</dt>
+	<dd>60</dd>
+
+	<dt>Cost per Credit</dt>
+	<dd>$430</dd>
+
+	<dt>Program Length</dt>
+	<dd>26 months</dd>
+
+	<dt>Description</dt>
+	<dd>Our Associate of Science degree gives you the option to major in business and leadership or create an individualized major. Both options will upgrade your career skills and prepare you for further education.</dd>
+
+	<dt>Next Start Date:</dt>
+	<dd>Spring 2017</dd>
+
+	<dt>Deliveries:</dt>
+	<dd>Online</dd>
+</dl>
+
 <div class="section--home__holder  section--home__academics  parallax">
 	<div class="inner">
 		<div class="grid">
