--- a/src/css/enhance/parallax.css
+++ b/src/css/enhance/parallax.css
@@ -41,8 +41,8 @@
     /* opacity: 0; */
 }
 .lazyloading {
-    /* /* opacity: 1; */*/
-    /* /* transition: 600ms opacity; */*/
+    /* /* opacity: 1; */
+    /* /* transition: 600ms opacity; */
     /*background: #f7f7f7 url("https://cdn4.bethel.edu/images/load.gif") no-repeat center;*/
     min-height: 60px;
 }
