--- a/src/css/typography/typography.css
+++ b/src/css/typography/typography.css
@@ -45,6 +45,10 @@ h6, .h6 {
   font-weight: 400;
 }
 
+.fw500 {
+  font-weight: 500;
+}
+
 .main h2:first-child,
 .main h3:first-child  {
   margin-top: 0;
