--- a/src/css/forms/form--find-program.css
+++ b/src/css/forms/form--find-program.css
@@ -96,7 +96,7 @@
     padding: .25em;
     flex: 1;
     text-align: center;
-    font-size: .9rem;
+    font-size: 16px;
     margin-right: .5em;
     -webkit-appearance: none;
 
@@ -107,6 +107,11 @@
         /* flex: 1 0 0; */
         margin-bottom: 0;
     }
+}
+
+.form--find-program .search--program input:focus,
+.form--find-program .search--program input:hover {
+    font-size: 16px;
 }
 
 .form--find-program .search--program .btn {
