--- a/src/templates/partials/section--apply.hbs
+++ b/src/templates/partials/section--apply.hbs
@@ -8,12 +8,12 @@
 				<section class="section--apply">
 					<div class="inner">
 						<div class="grid">
-							<div class="grid-cell u-medium-3-5  js-animateSlideRight">
+							<div class="grid-cell  js-animateSlideRight">
 								<div class="medium-grid-pad-2x">
 									<img src="assets/images/macbook.png">
 								</div>
 							</div>
-							<div class="grid-cell u-medium-2-5  js-animateSlideLeft">
+							<div class="grid-cell">
 								<div class="small-grid-pad-2x  medium-grid-pad-2x">
 									<h2 class="beta  fw300">Apply Now</h2>
 									<p>We try to make the application process as easy as possible. The whole process can take you less than 30 minutes!</p>
