--- a/src/templates/partials/section--contact-visit.hbs
+++ b/src/templates/partials/section--contact-visit.hbs
@@ -49,8 +49,8 @@
 					</svg>
 					<h3 class="h2">Contact Us</h3>
 					<p>Finding the right university is a challenge. We want you to know that we are here to help with any questions or concerns you may have. No question is too big or too small.</p> 
-					<p class="h4"><a href="tel:6516388500">651.638.8500</a></p>
-					<p class="h4"><a href="mailto:contact@bethel.edu">contact@bethel.edu</a></p>
+					<p class="h4"><a href="tel:6516388500">651.635.8000</a></p>
+					<p class="h4"><a href="mailto:contact@bethel.edu">admissions@bethel.edu</a></p>
 				</div>
 
 				<div class="grid-cell u-medium-1-2  pa2  ph5@medium  js-animateSlideLeft">
@@ -69,8 +69,8 @@
 						</g>
 					</svg>
 					<h3 class="h2">Visit</h3>
-					<p>We think our campus is an amazing place and we'd love to show it to you. Schedule your own visit our come during one of our campus visit events. 
-					<p><button class="btn mt2  mr1" jtype="submit">See events</button><button class="btn  mt2" jtype="submit">Schedule a visit</button></p>
+					<p>Our campuses are amazing places and we'd love to show them to you. Schedule your own visit or attend one of our campus visit events. 
+					<p><a class="btn mt2  mr1" href="https://www.bethel.edu/events/">See events</a><a class="btn  mt2" href="https://www.bethel.edu/undergrad/admissions/visit/individual-visits/">Schedule a visit</a></p>
 
 				</div>
 
