--- a/src/templates/partials/section--request-info.hbs
+++ b/src/templates/partials/section--request-info.hbs
@@ -1,40 +1,21 @@
-<<<<<<< HEAD
 <section class="grid-section  mt0  pv6  bkg--gradient-navy-blue">
-=======
-<section class="grid-section  mt0  pv6  bkg--navy">
->>>>>>> master
 	<div class="inner">
 		<div class="grid  grid--center">
 			<div class="grid-cell">
 				<div class="medium-grid-pad-1x">
-<<<<<<< HEAD
 					<h3 class="beta  mb2  center  fw300" style="color: #fff">Request information</h3>
 					<form class="form--request-info">
 					<blockquote class="center">
 						<fieldset>
 							Hello, my <label class="form--request-info__label" for="user_name">name</label> is <input required="" name="user[name]" id="user_name" value="" type="text">
-=======
-					<h3 class="alpha  mb2  center  fw300" style="color: #fff">Request information</h3>
-					<form class="form--request-info">
-					<blockquote class="center">
-						<fieldset>
-							My <label class="form--request-info__label" for="user_name">name</label> is <input required="" name="user[name]" id="user_name" value="" type="text">
->>>>>>> master
 							and my <label class="form--request-info__label" for="user_email">email</label> is <input required="" name="user[email]" id="user_email" value="" type="email">.
 						</fieldset>
 						<fieldset>
 							I'd like to learn more about Bethel's
-<<<<<<< HEAD
 							<select class="form--request-info__select">
 								<option id="bachelors" value="Bachelors">bachelor's degrees</option>
 								<option value="Bachelors">master's degrees</option>
 								<option value="Bachelors">doctoral programs</option>
-=======
-							<select>
-								<option id="bachelors" value="Bachelors">bachelors degrees</option>
-								<option value="Bachelors">masters degrees</option>
-								<option value="Bachelors">doctorate programs</option>
->>>>>>> master
 							</select> .
 						</fieldset>
 					</blockquote>
@@ -43,4 +24,5 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
+</section>
