--- a/src/templates/partials/section--find-program.hbs
+++ b/src/templates/partials/section--find-program.hbs
@@ -1,5 +1,8 @@
-<<<<<<< HEAD
-<section class="grid-section  section--find-program  mt0  pv6--medium">
+<section 
+	class="grid-section  section--find-program  mt0  pv6--medium  lazyload"  
+	data-bgset="https://cdn1.bethel.edu/resize/unsafe/400x0/smart/https://www.bethel.edu/_homepages/www/images/study-smile-duotone.jpg 400w, https://cdn1.bethel.edu/resize/unsafe/600x0/smart/https://www.bethel.edu/_homepages/www/images/study-smile-duotone.jpg 600w, https://cdn1.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/_homepages/www/images/study-smile-duotone.jpg 800w, https://cdn1.bethel.edu/resize/unsafe/1000x0/smart/https://www.bethel.edu/_homepages/www/images/study-smile-duotone.jpg 1000w, https://cdn1.bethel.edu/resize/unsafe/1200x0/smart/https://www.bethel.edu/_homepages/www/images/study-smile-duotone.jpg 1200w, https://cdn1.bethel.edu/resize/unsafe/1400x0/smart/https://www.bethel.edu/_homepages/www/images/study-smile-duotone.jpg 1400w, https://cdn1.bethel.edu/resize/unsafe/1600x0/smart/https://www.bethel.edu/_homepages/www/images/study-smile-duotone.jpg 1600w" 
+	data-sizes="auto">
+
 	<div class="inner">
 		<div class="grid  grid--center  mt3  mb6--medium  pb3 pb6--medium">
 			<div class="grid-cell  u-medium-4-5">
@@ -76,36 +79,10 @@
 							</div> --}}
 						</div>
 						
-=======
-<section class="grid-section  mt0  pv6">
-	<div class="inner">
-		<div class="grid  grid--center  mv6">
-			<div class="grid-cell">
-				<div class="medium-grid-pad-1x">
-					<h3 class="alpha  mb2  center  fw300">Find your program</h3>
-					<form class="form--find-program">
-						<fieldset>
-							<input type="radio" value="" checked="true"> All</input>
-							<input type="radio" value=""> Bachelors</input>
-							<input type="radio" value=""> Masters</input>
-							<input type="radio" value=""> Doctorate</input>
-						</fieldset>
-						<fieldset>
-							<input type="checkbox" checked="true"> Campus</input>
-							<input type="checkbox" checked="true"> Online</input>
-							<input type="checkbox" checked="true"> Evening</input>
-						</fieldset>
-						<fieldset>
-							<input type="search" placeholder="Search">
-						</fieldset>
->>>>>>> master
 					</form>
 				</div>
 			</div>
 		</div>
-<<<<<<< HEAD
+
 	</div>
 </section>
-=======
-	</section>
->>>>>>> master
